#5, #8, #8 Fix intro spacing

--- a/assets/scss/templates/drinks.scss
+++ b/assets/scss/templates/drinks.scss
@@ -4,9 +4,11 @@
 
 @import "../_utilities/templates";
 
+$column: percentage( 1 / 12 );
+
 .page__drinks {
 	display: grid;
-	grid-gap: map-get($spacer, 1);
+	grid-template-columns: repeat(12, $column);
 }
 
 @include media(">=for-tablet-portrait-up") {
@@ -20,6 +22,17 @@
 	.page__drinks {
 		grid-template-columns: repeat(4, 1fr);
 		grid-gap: map-get($spacer, 2);
+	}
+}
+
+.drinks__intro {
+	
+	@include media(">=for-tablet-landscape-up") {
+		grid-column: 3 / 11;
+		grid-row: 1 / 2;
+		max-width: var(--content-width);
+		padding-left: calc( 50% - (var(--content-width) / 2) );
+		padding-right: calc( 50% - (var(--content-width) / 2) );
 	}
 }
 
